syntax = "proto3";

package vega.wallet.v1;
option go_package = "code.vegaprotocol.io/vega/protos/vega/wallet/v1";

import "vega/commands/v1/commands.proto";
import "vega/commands/v1/validator_commands.proto";
import "vega/commands/v1/data.proto";

message SubmitTransactionRequest {
  reserved 2001;

  string pub_key = 1;
  bool propagate = 2;

  oneof command {
    // User commands
    commands.v1.OrderSubmission order_submission = 1001;
    commands.v1.OrderCancellation order_cancellation = 1002;
    commands.v1.OrderAmendment order_amendment = 1003;
    commands.v1.WithdrawSubmission withdraw_submission = 1004;
    commands.v1.ProposalSubmission proposal_submission = 1005;
    commands.v1.VoteSubmission vote_submission = 1006;
    commands.v1.LiquidityProvisionSubmission liquidity_provision_submission = 1007;
    commands.v1.DelegateSubmission delegate_submission = 1008;
    commands.v1.UndelegateSubmission undelegate_submission = 1009;
    commands.v1.LiquidityProvisionCancellation liquidity_provision_cancellation = 1010;
    commands.v1.LiquidityProvisionAmendment liquidity_provision_amendment = 1011;
    commands.v1.Transfer transfer = 1012;
    commands.v1.CancelTransfer cancel_transfer = 1013;
    commands.v1.AnnounceNode announce_node = 1014;
    commands.v1.BatchMarketInstructions batch_market_instructions = 1015;

    // Validator commands
    commands.v1.NodeVote node_vote = 2002;
    commands.v1.NodeSignature node_signature = 2003;
    commands.v1.ChainEvent chain_event = 2004;
    commands.v1.KeyRotateSubmission key_rotate_submission = 2005;
    commands.v1.StateVariableProposal state_variable_proposal = 2006;
    commands.v1.ValidatorHeartbeat validator_heartbeat = 2007;
    commands.v1.EthereumKeyRotateSubmission ethereum_key_rotate_submission = 2008;
    commands.v1.ProtocolUpgradeProposal protocol_upgrade_proposal = 2009;
    commands.v1.IssueSignatures issue_signatures = 2010;

    // Oracle commands
    commands.v1.OracleDataSubmission oracle_data_submission = 3001;
  }
}
